Ne docker image with postgres-pgvector

--- a/context/Dockerfile
+++ b/context/Dockerfile
@@ -1,7 +1,16 @@
-FROM python:3.8.16-bullseye
+FROM postgres:14.6
 
-RUN pip install pipenv
+RUN apt-get update && \
+    apt-get install -y git make gcc && \
+    rm -rf /var/lib/apt/lists/*
 
-WORKDIR /src
+ENV PG_CONFIG /usr/lib/postgresql/14/bin/pg_config
+RUN export PG_CONFIG && \
+    git clone --branch v0.4.1 https://github.com/pgvector/pgvector.git && \
+    cd pgvector && \
+    make && \
+    make install
 
-ENTRYPOINT [ "/src/fab/entryPoint.sh" ]
+RUN rm -rf /tmp/pgvector
+
+CMD ["postgres"]
