--- a/context/Dockerfile
+++ b/context/Dockerfile
@@ -7,7 +7,7 @@ ENTRYPOINT ["/src/fab/entryPoint.sh"]
 #node:18 image already has a user node with uid:gid 1000:1000
 #We add it to sudo list
 RUN apt-get update \
-    && apt-get install -y sudo less \
+    && apt-get install -y sudo less git \
     && rm -rf /var/lib/apt/lists/* \
     && usermod -aG sudo node \
     && echo '%sudo ALL=(ALL) NOPASSWD:ALL' >> /etc/sudoers \
